// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OeeDashboard — state rendering (before/after snapshot equivalence) renders ActiveDowntimeState when isActiveDowntime is true 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "paddingVertical": 8,
          },
          {
            "backgroundColor": "#FFEBEE",
          },
        ]
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFEBEE",
            "borderRadius": 12,
            "marginBottom": 16,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
        testID="card-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#FFEBEE",
              "borderColor": "#EF9A9A",
              "borderRadius": 12,
              "borderWidth": 1,
              "flex": undefined,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 1,
            }
          }
          testID="card-container"
        >
          <View
            style={
              [
                {
                  "flexShrink": 1,
                },
                undefined,
              ]
            }
            testID="card"
          >
            <View
              borderRadiusStyles={{}}
              style={
                [
                  {
                    "paddingHorizontal": 16,
                  },
                  {
                    "paddingVertical": 16,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "transparent",
                      "borderRadius": 24,
                      "height": 48,
                      "margin": 6,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 0,
                        "width": 0,
                      },
                      "shadowOpacity": 0,
                      "shadowRadius": 0,
                      "width": 48,
                    }
                  }
                  testID="icon-button-container-outer-layer"
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "backgroundColor": "transparent",
                        "borderColor": "rgba(121, 116, 126, 1)",
                        "borderRadius": 24,
                        "borderWidth": 0,
                        "elevation": 0,
                        "flex": 1,
                        "overflow": "hidden",
                        "shadowColor": "#000",
                        "shadowOffset": {
                          "height": 0,
                          "width": 0,
                        },
                        "shadowOpacity": 0,
                        "shadowRadius": 0,
                      }
                    }
                    testID="icon-button-container"
                  >
                    <View
                      accessibilityComponentType="button"
                      accessibilityRole="button"
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": true,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityTraits="button"
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      centered={true}
                      collapsable={false}
                      focusable={true}
                      hitSlop={
                        {
                          "bottom": 6,
                          "left": 6,
                          "right": 6,
                          "top": 6,
                        }
                      }
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        [
                          {
                            "overflow": "hidden",
                          },
                          [
                            {
                              "alignItems": "center",
                              "flexGrow": 1,
                              "justifyContent": "center",
                            },
                            undefined,
                          ],
                        ]
                      }
                      testID="icon-button"
                    >
                      <Text
                        accessibilityElementsHidden={true}
                        importantForAccessibility="no-hide-descendants"
                        pointerEvents="none"
                        selectable={false}
                        style={
                          [
                            {
                              "backgroundColor": "transparent",
                            },
                            {
                              "color": "#D32F2F",
                              "fontSize": 32,
                            },
                          ]
                        }
                      >
                        □
                      </Text>
                    </View>
                  </View>
                </View>
                <Text
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 22,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 28,
                        },
                        {
                          "color": "#D32F2F",
                          "fontWeight": "bold",
                        },
                      ],
                    ]
                  }
                >
                  PARO ACTIVO
                </Text>
              </View>
              <Text
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "letterSpacing": 0.15,
                        "lineHeight": 24,
                      },
                      {
                        "color": "#B71C1C",
                        "marginTop": 8,
                      },
                    ],
                  ]
                }
              >
                FMP
                 · 
                Falta materia prima
              </Text>
              <Text
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "letterSpacing": 0.15,
                        "lineHeight": 24,
                      },
                      {
                        "color": "#757575",
                        "marginTop": 4,
                      },
                    ],
                  ]
                }
              >
                Duración:
              </Text>
              <View
                style={
                  {
                    "alignItems": "center",
                    "paddingVertical": 8,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                      },
                      {
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontSize": 32,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "700",
                        },
                        {
                          "color": "#D32F2F",
                        },
                      ],
                    ]
                  }
                >
                  00:05:00
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#F9A825",
            "borderRadius": 8,
            "marginTop": 8,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="button-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#F9A825",
              "borderColor": "transparent",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 0,
              "flex": undefined,
              "minWidth": 64,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
          testID="button-container"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 8,
                },
              ]
            }
            testID="button"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "minHeight": 72,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "marginLeft": 12,
                      "marginRight": -4,
                    },
                    {
                      "marginLeft": 16,
                      "marginRight": -16,
                    },
                    false,
                  ]
                }
                testID="button-icon-container"
              >
                <Text
                  accessibilityElementsHidden={true}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                      },
                      {
                        "color": "#000000",
                        "fontSize": 20,
                      },
                    ]
                  }
                >
                  □
                </Text>
              </View>
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      [
                        {
                          "marginHorizontal": 16,
                          "marginVertical": 9,
                          "textAlign": "center",
                        },
                        false,
                        {
                          "marginHorizontal": 24,
                          "marginVertical": 10,
                        },
                        undefined,
                        false,
                        {
                          "color": "#000000",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        {
                          "fontSize": 20,
                          "fontWeight": "bold",
                        },
                      ],
                    ],
                  ]
                }
                testID="button-text"
              >
                FIN DE PARO
              </Text>
            </View>
          </View>
        </View>
      </View>
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#757575",
                "marginTop": 8,
                "textAlign": "center",
              },
            ],
          ]
        }
      >
        Cierra el paro activo para continuar
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`OeeDashboard — state rendering (before/after snapshot equivalence) renders ActiveDowntimeState with null event gracefully 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "paddingVertical": 8,
          },
          {
            "backgroundColor": "#FFEBEE",
          },
        ]
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFEBEE",
            "borderRadius": 12,
            "marginBottom": 16,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
        testID="card-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#FFEBEE",
              "borderColor": "#EF9A9A",
              "borderRadius": 12,
              "borderWidth": 1,
              "flex": undefined,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 1,
            }
          }
          testID="card-container"
        >
          <View
            style={
              [
                {
                  "flexShrink": 1,
                },
                undefined,
              ]
            }
            testID="card"
          >
            <View
              borderRadiusStyles={{}}
              style={
                [
                  {
                    "paddingHorizontal": 16,
                  },
                  {
                    "paddingVertical": 16,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "transparent",
                      "borderRadius": 24,
                      "height": 48,
                      "margin": 6,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 0,
                        "width": 0,
                      },
                      "shadowOpacity": 0,
                      "shadowRadius": 0,
                      "width": 48,
                    }
                  }
                  testID="icon-button-container-outer-layer"
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "backgroundColor": "transparent",
                        "borderColor": "rgba(121, 116, 126, 1)",
                        "borderRadius": 24,
                        "borderWidth": 0,
                        "elevation": 0,
                        "flex": 1,
                        "overflow": "hidden",
                        "shadowColor": "#000",
                        "shadowOffset": {
                          "height": 0,
                          "width": 0,
                        },
                        "shadowOpacity": 0,
                        "shadowRadius": 0,
                      }
                    }
                    testID="icon-button-container"
                  >
                    <View
                      accessibilityComponentType="button"
                      accessibilityRole="button"
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": true,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityTraits="button"
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      centered={true}
                      collapsable={false}
                      focusable={true}
                      hitSlop={
                        {
                          "bottom": 6,
                          "left": 6,
                          "right": 6,
                          "top": 6,
                        }
                      }
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        [
                          {
                            "overflow": "hidden",
                          },
                          [
                            {
                              "alignItems": "center",
                              "flexGrow": 1,
                              "justifyContent": "center",
                            },
                            undefined,
                          ],
                        ]
                      }
                      testID="icon-button"
                    >
                      <Text
                        accessibilityElementsHidden={true}
                        importantForAccessibility="no-hide-descendants"
                        pointerEvents="none"
                        selectable={false}
                        style={
                          [
                            {
                              "backgroundColor": "transparent",
                            },
                            {
                              "color": "#D32F2F",
                              "fontSize": 32,
                            },
                          ]
                        }
                      >
                        □
                      </Text>
                    </View>
                  </View>
                </View>
                <Text
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 22,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 28,
                        },
                        {
                          "color": "#D32F2F",
                          "fontWeight": "bold",
                        },
                      ],
                    ]
                  }
                >
                  PARO ACTIVO
                </Text>
              </View>
              <Text
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "letterSpacing": 0.15,
                        "lineHeight": 24,
                      },
                      {
                        "color": "#B71C1C",
                        "marginTop": 8,
                      },
                    ],
                  ]
                }
              >
                ???
                 · 
                Desconocido
              </Text>
              <Text
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "letterSpacing": 0.15,
                        "lineHeight": 24,
                      },
                      {
                        "color": "#757575",
                        "marginTop": 4,
                      },
                    ],
                  ]
                }
              >
                Duración:
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#F9A825",
            "borderRadius": 8,
            "marginTop": 8,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="button-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#F9A825",
              "borderColor": "transparent",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 0,
              "flex": undefined,
              "minWidth": 64,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
          testID="button-container"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 8,
                },
              ]
            }
            testID="button"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "minHeight": 72,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "marginLeft": 12,
                      "marginRight": -4,
                    },
                    {
                      "marginLeft": 16,
                      "marginRight": -16,
                    },
                    false,
                  ]
                }
                testID="button-icon-container"
              >
                <Text
                  accessibilityElementsHidden={true}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                      },
                      {
                        "color": "#000000",
                        "fontSize": 20,
                      },
                    ]
                  }
                >
                  □
                </Text>
              </View>
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      [
                        {
                          "marginHorizontal": 16,
                          "marginVertical": 9,
                          "textAlign": "center",
                        },
                        false,
                        {
                          "marginHorizontal": 24,
                          "marginVertical": 10,
                        },
                        undefined,
                        false,
                        {
                          "color": "#000000",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        {
                          "fontSize": 20,
                          "fontWeight": "bold",
                        },
                      ],
                    ],
                  ]
                }
                testID="button-text"
              >
                FIN DE PARO
              </Text>
            </View>
          </View>
        </View>
      </View>
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0.4,
                "lineHeight": 16,
              },
              {
                "color": "#757575",
                "marginTop": 8,
                "textAlign": "center",
              },
            ],
          ]
        }
      >
        Cierra el paro activo para continuar
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`OeeDashboard — state rendering (before/after snapshot equivalence) renders NoShiftState when shiftStarted is false 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "paddingVertical": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 28,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 36,
              },
              {
                "color": "#5D4037",
                "fontWeight": "bold",
                "marginBottom": 4,
              },
            ],
          ]
        }
      >
        OEE Dashboard
      </Text>
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
              },
              {
                "color": "#757575",
                "marginBottom": 16,
              },
            ],
          ]
        }
      >
        No hay turno activo
      </Text>
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "rgba(103, 80, 164, 1)",
            "borderRadius": 8,
            "marginTop": 24,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="button-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "rgba(103, 80, 164, 1)",
              "borderColor": "transparent",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 0,
              "flex": undefined,
              "minWidth": 64,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
          testID="button-container"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 8,
                },
              ]
            }
            testID="button"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "minHeight": 64,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "marginLeft": 12,
                      "marginRight": -4,
                    },
                    {
                      "marginLeft": 16,
                      "marginRight": -16,
                    },
                    false,
                  ]
                }
                testID="button-icon-container"
              >
                <Text
                  accessibilityElementsHidden={true}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                      },
                      {
                        "color": "rgba(255, 255, 255, 1)",
                        "fontSize": 18,
                      },
                    ]
                  }
                >
                  □
                </Text>
              </View>
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      [
                        {
                          "marginHorizontal": 16,
                          "marginVertical": 9,
                          "textAlign": "center",
                        },
                        false,
                        {
                          "marginHorizontal": 24,
                          "marginVertical": 10,
                        },
                        undefined,
                        false,
                        {
                          "color": "rgba(255, 255, 255, 1)",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        {
                          "fontSize": 18,
                          "fontWeight": "600",
                        },
                      ],
                    ],
                  ]
                }
                testID="button-text"
              >
                Iniciar Turno
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`OeeDashboard — state rendering (before/after snapshot equivalence) renders NormalOperationState when shift is active and no downtime 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "paddingVertical": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 28,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 36,
              },
              {
                "color": "#5D4037",
                "fontWeight": "bold",
                "marginBottom": 4,
              },
            ],
          ]
        }
      >
        OEE Dashboard
      </Text>
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
              },
              {
                "color": "#757575",
                "marginBottom": 16,
              },
            ],
          ]
        }
      >
        Turno activo · CAVEMIL-03
      </Text>
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 12,
            "marginBottom": 12,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
        testID="card-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 12,
              "flex": undefined,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 1,
            }
          }
          testID="card-container"
        >
          <View
            style={
              [
                {
                  "flexShrink": 1,
                },
                undefined,
              ]
            }
            testID="card"
          >
            <View
              borderRadiusStyles={{}}
              style={
                [
                  {
                    "paddingHorizontal": 16,
                  },
                  {
                    "paddingTop": 16,
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 22,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 28,
                      },
                      {
                        "color": "#5D4037",
                        "fontWeight": "bold",
                        "marginBottom": 4,
                      },
                    ],
                  ]
                }
              >
                Registrar Producción
              </Text>
              <Text
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "letterSpacing": 0.25,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#757575",
                      },
                    ],
                  ]
                }
              >
                Cajas: 150
              </Text>
            </View>
            <View
              borderRadiusStyles={{}}
              index={1}
              siblings={
                [
                  "Card.Content",
                  "Card.Actions",
                ]
              }
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "padding": 8,
                  },
                  {
                    "justifyContent": "flex-end",
                  },
                  {
                    "justifyContent": "flex-start",
                    "paddingBottom": 12,
                    "paddingHorizontal": 16,
                  },
                ]
              }
              total={2}
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "rgba(103, 80, 164, 1)",
                    "borderRadius": 8,
                    "flex": 1,
                    "marginLeft": 8,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                  }
                }
                testID="button-container-outer-layer"
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "rgba(103, 80, 164, 1)",
                      "borderColor": "transparent",
                      "borderRadius": 8,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "flex": undefined,
                      "minWidth": 64,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 0,
                        "width": 0,
                      },
                      "shadowOpacity": 0,
                      "shadowRadius": 0,
                    }
                  }
                  testID="button-container"
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "borderRadius": 8,
                        },
                      ]
                    }
                    testID="button"
                  >
                    <View
                      style={
                        [
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "justifyContent": "center",
                          },
                          {
                            "minHeight": 56,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "marginLeft": 12,
                              "marginRight": -4,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": -16,
                            },
                            false,
                          ]
                        }
                        testID="button-icon-container"
                      >
                        <Text
                          accessibilityElementsHidden={true}
                          importantForAccessibility="no-hide-descendants"
                          pointerEvents="none"
                          selectable={false}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                              },
                              {
                                "color": "rgba(255, 255, 255, 1)",
                                "fontSize": 16,
                              },
                            ]
                          }
                        >
                          □
                        </Text>
                      </View>
                      <Text
                        numberOfLines={1}
                        selectable={false}
                        style={
                          [
                            {
                              "textAlign": "left",
                            },
                            {
                              "color": "rgba(28, 27, 31, 1)",
                              "writingDirection": "ltr",
                            },
                            [
                              {
                                "fontFamily": "System",
                                "fontSize": 14,
                                "fontWeight": "500",
                                "letterSpacing": 0.1,
                                "lineHeight": 20,
                              },
                              [
                                {
                                  "marginHorizontal": 16,
                                  "marginVertical": 9,
                                  "textAlign": "center",
                                },
                                false,
                                {
                                  "marginHorizontal": 24,
                                  "marginVertical": 10,
                                },
                                false,
                                false,
                                {
                                  "color": "rgba(255, 255, 255, 1)",
                                  "fontFamily": "System",
                                  "fontSize": 14,
                                  "fontWeight": "500",
                                  "letterSpacing": 0.1,
                                  "lineHeight": 20,
                                },
                                {
                                  "fontSize": 16,
                                  "fontWeight": "600",
                                },
                              ],
                            ],
                          ]
                        }
                        testID="button-text"
                      >
                        Registrar Producción
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 12,
            "marginBottom": 12,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
        testID="card-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 12,
              "flex": undefined,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 1,
            }
          }
          testID="card-container"
        >
          <View
            style={
              [
                {
                  "flexShrink": 1,
                },
                undefined,
              ]
            }
            testID="card"
          >
            <View
              borderRadiusStyles={{}}
              style={
                [
                  {
                    "paddingHorizontal": 16,
                  },
                  {
                    "paddingTop": 16,
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 22,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 28,
                      },
                      {
                        "color": "#5D4037",
                        "fontWeight": "bold",
                        "marginBottom": 4,
                      },
                    ],
                  ]
                }
              >
                Iniciar Paro
              </Text>
              <Text
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "letterSpacing": 0.25,
                        "lineHeight": 20,
                      },
                      {
                        "color": "#757575",
                      },
                    ],
                  ]
                }
              >
                Registrar paro de línea
              </Text>
            </View>
            <View
              borderRadiusStyles={{}}
              index={1}
              siblings={
                [
                  "Card.Content",
                  "Card.Actions",
                ]
              }
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "padding": 8,
                  },
                  {
                    "justifyContent": "flex-end",
                  },
                  {
                    "justifyContent": "flex-start",
                    "paddingBottom": 12,
                    "paddingHorizontal": 16,
                  },
                ]
              }
              total={2}
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#D32F2F",
                    "borderRadius": 8,
                    "flex": 1,
                    "marginLeft": 8,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                  }
                }
                testID="button-container-outer-layer"
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "#D32F2F",
                      "borderColor": "transparent",
                      "borderRadius": 8,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "flex": undefined,
                      "minWidth": 64,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 0,
                        "width": 0,
                      },
                      "shadowOpacity": 0,
                      "shadowRadius": 0,
                    }
                  }
                  testID="button-container"
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "borderRadius": 8,
                        },
                      ]
                    }
                    testID="button"
                  >
                    <View
                      style={
                        [
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "justifyContent": "center",
                          },
                          {
                            "minHeight": 56,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "marginLeft": 12,
                              "marginRight": -4,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": -16,
                            },
                            false,
                          ]
                        }
                        testID="button-icon-container"
                      >
                        <Text
                          accessibilityElementsHidden={true}
                          importantForAccessibility="no-hide-descendants"
                          pointerEvents="none"
                          selectable={false}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                              },
                              {
                                "color": "rgba(255, 255, 255, 1)",
                                "fontSize": 16,
                              },
                            ]
                          }
                        >
                          □
                        </Text>
                      </View>
                      <Text
                        numberOfLines={1}
                        selectable={false}
                        style={
                          [
                            {
                              "textAlign": "left",
                            },
                            {
                              "color": "rgba(28, 27, 31, 1)",
                              "writingDirection": "ltr",
                            },
                            [
                              {
                                "fontFamily": "System",
                                "fontSize": 14,
                                "fontWeight": "500",
                                "letterSpacing": 0.1,
                                "lineHeight": 20,
                              },
                              [
                                {
                                  "marginHorizontal": 16,
                                  "marginVertical": 9,
                                  "textAlign": "center",
                                },
                                false,
                                {
                                  "marginHorizontal": 24,
                                  "marginVertical": 10,
                                },
                                false,
                                false,
                                {
                                  "color": "rgba(255, 255, 255, 1)",
                                  "fontFamily": "System",
                                  "fontSize": 14,
                                  "fontWeight": "500",
                                  "letterSpacing": 0.1,
                                  "lineHeight": 20,
                                },
                                {
                                  "fontSize": 16,
                                  "fontWeight": "600",
                                },
                              ],
                            ],
                          ]
                        }
                        testID="button-text"
                      >
                        Iniciar Paro
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 12,
            "marginBottom": 12,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
        testID="card-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 12,
              "flex": undefined,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 1,
            }
          }
          testID="card-container"
        >
          <View
            style={
              [
                {
                  "flexShrink": 1,
                },
                undefined,
              ]
            }
            testID="card"
          >
            <View
              borderRadiusStyles={{}}
              style={
                [
                  {
                    "paddingHorizontal": 16,
                  },
                  {
                    "paddingVertical": 16,
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 22,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 28,
                      },
                      {
                        "color": "#5D4037",
                        "fontWeight": "bold",
                        "marginBottom": 4,
                      },
                    ],
                  ]
                }
              >
                Métricas OEE
              </Text>
              <View
                style={
                  {
                    "flexDirection": "row",
                    "justifyContent": "space-around",
                    "marginBottom": 8,
                    "marginTop": 12,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                    }
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 16,
                            "fontWeight": "500",
                            "letterSpacing": 0.15,
                            "lineHeight": 24,
                          },
                          {
                            "color": "#5D4037",
                            "fontWeight": "bold",
                          },
                        ],
                      ]
                    }
                  >
                    92.5
                    %
                  </Text>
                  <Text
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 12,
                            "fontWeight": "400",
                            "letterSpacing": 0.4,
                            "lineHeight": 16,
                          },
                          {
                            "color": "#757575",
                            "marginTop": 4,
                          },
                        ],
                      ]
                    }
                  >
                    Disponibilidad
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                    }
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 16,
                            "fontWeight": "500",
                            "letterSpacing": 0.15,
                            "lineHeight": 24,
                          },
                          {
                            "color": "#5D4037",
                            "fontWeight": "bold",
                          },
                        ],
                      ]
                    }
                  >
                    85.3
                    %
                  </Text>
                  <Text
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 12,
                            "fontWeight": "400",
                            "letterSpacing": 0.4,
                            "lineHeight": 16,
                          },
                          {
                            "color": "#757575",
                            "marginTop": 4,
                          },
                        ],
                      ]
                    }
                  >
                    Rendimiento
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                    }
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 16,
                            "fontWeight": "500",
                            "letterSpacing": 0.15,
                            "lineHeight": 24,
                          },
                          {
                            "color": "#5D4037",
                            "fontWeight": "bold",
                          },
                        ],
                      ]
                    }
                  >
                    98.1
                    %
                  </Text>
                  <Text
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 12,
                            "fontWeight": "400",
                            "letterSpacing": 0.4,
                            "lineHeight": 16,
                          },
                          {
                            "color": "#757575",
                            "marginTop": 4,
                          },
                        ],
                      ]
                    }
                  >
                    Calidad
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "borderTopColor": "#E0E0E0",
                    "borderTopWidth": 1,
                    "marginTop": 8,
                    "paddingTop": 8,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 28,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 36,
                        },
                        {
                          "color": "#388E3C",
                          "fontWeight": "bold",
                        },
                      ],
                    ]
                  }
                >
                  77.2
                  %
                </Text>
                <Text
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 12,
                          "fontWeight": "400",
                          "letterSpacing": 0.4,
                          "lineHeight": 16,
                        },
                        {
                          "color": "#757575",
                        },
                      ],
                    ]
                  }
                >
                  OEE
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderRadius": 8,
            "marginTop": 8,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="button-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "rgba(121, 116, 126, 1)",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "flex": undefined,
              "minWidth": 64,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
          testID="button-container"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 7,
                },
              ]
            }
            testID="button"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "minHeight": 48,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "marginLeft": 12,
                      "marginRight": -4,
                    },
                    {
                      "marginLeft": 16,
                      "marginRight": -16,
                    },
                    false,
                  ]
                }
                testID="button-icon-container"
              >
                <Text
                  accessibilityElementsHidden={true}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                      },
                      {
                        "color": "rgba(103, 80, 164, 1)",
                        "fontSize": 14,
                      },
                    ]
                  }
                >
                  □
                </Text>
              </View>
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      [
                        {
                          "marginHorizontal": 16,
                          "marginVertical": 9,
                          "textAlign": "center",
                        },
                        false,
                        {
                          "marginHorizontal": 24,
                          "marginVertical": 10,
                        },
                        undefined,
                        false,
                        {
                          "color": "rgba(103, 80, 164, 1)",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        {
                          "fontSize": 14,
                          "fontWeight": "600",
                        },
                      ],
                    ],
                  ]
                }
                testID="button-text"
              >
                Cerrar Turno
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
